workloads/minio/miniosnsd.yaml
kind: Service
apiVersion: v1
metadata:
  name: miniosnsd
  namespace: s3-system
  labels:
    app: miniosnsd
#  annotations:
#    metallb.universe.tf/address-pool: mlb-pool
spec:
#  allocateLoadBalancerNodePorts: false
#  type: LoadBalancer
#  loadBalancerIP: 172.22.1.150
  selector:
    app: miniosnsd
  ports:
  - name: mclient
    protocol: TCP
    port: 9000
    targetPort: 9000
  - name: mconsole
    protocol: TCP
    port: 9001
    targetPort: 9001
---
apiVersion: v1
kind: Pod
metadata:
  name: miniosnsd
  namespace: s3-system
  labels:
    app: miniosnsd
spec:
  hostname: minioserver
  volumes:
  - name: miniodata
    hostPath:
      path: /var/miniosnsd
  containers:
  - name: minioserver
    image: quay.io/minio/minio
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: miniodata
      mountPath: /disk
    args:
    - server
    - --console-address
    - :9001
    - /disk
    ports:
    - containerPort: 9000
      name: mclient
      protocol: TCP
      hostPort: 9000
    - containerPort: 9001
      name: mconsole
      protocol: TCP 
      hostPort: 9001
  nodeSelector:
    app: taroko
