workloads/minio/svc-miniosnmd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: s3
---
apiVersion: v1
kind: Service
metadata:
  namespace: s3
  name: minio
  labels:
    app: minio
spec:
  selector:
    app: minio
  clusterIP: None
