workloads/minio/ing-minio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-minio
  namespace: s3-system
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /console
        backend:
          service:
            name: miniosnsd
            port:
              number: 9001
